--- a/manifests/landing-zone/setters.yaml
+++ b/manifests/landing-zone/setters.yaml
@@ -19,12 +19,12 @@ metadata: # kpt-merge: /setters
     config.kubernetes.io/local-config: "true"
 data:
   # Organization ID and billing account
-  org-id: "123456789012"
-  billing-account-id: AAAAAA-BBBBBB-CCCCCC
+  org-id: "153064141304"
+  billing-account-id: 01CEB5-CD76FF-CF7063
   # Groups to use for org-level roles
-  group-org-admins: gcp-organization-admins@example.com
-  group-billing-admins: gcp-billing-admins@example.com
+  group-org-admins: gcp-organization-admins@yoshimasak.altostrat.com
+  group-billing-admins: gcp-billing-admins@yoshimasak.altostrat.com
   # The project where Config Controller is deployed
-  management-project-id: management-project-id
+  management-project-id: yoshimasak-kcc-demo
   # This default is safe to keep
   management-namespace: config-control
