--- a/templates/hierarchy/hierarchy.yaml
+++ b/templates/hierarchy/hierarchy.yaml
@@ -21,18 +21,14 @@ metadata: # kpt-merge: hierarchy/root-hierarchy
     config.kubernetes.io/local-config: 'true'
 spec:
   config:
-    - retail:
-        - apps:
-            $subtree: environments
-        - data:
-            $subtree: environments
-    - finance:
-        - commercial:
+    - department:
+        - service:
             $subtree: environments
   parentRef:
     # This should match your organization ID
-    external: '123456789012'
+    external: '1234567890123'
   subtrees:
     environments:
       - dev
+      - staging
       - prod
