--- a/templates/projects/project.yaml
+++ b/templates/projects/project.yaml
@@ -14,13 +14,13 @@
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Project
 metadata: # kpt-merge: projects/project-id
-  name: project-id # kpt-set: ${project-id}
-  namespace: projects # kpt-set: ${projects-namespace}
+  name: project-id # kpt-set: prod-${project-id}
+  namespace: projects # kpt-set: prod-${projects-namespace}
   annotations:
     cnrm.cloud.google.com/auto-create-network: "false"
     cnrm.cloud.google.com/blueprint: cnrm/landing-zone:project/v0.4.3,kpt-pkg
 spec:
-  name: project-id # kpt-set: ${project-id}
+  name: project-id # kpt-set: prod-${project-id}
   billingAccountRef:
     external: "AAAAAA-BBBBBB-CCCCCC" # kpt-set: ${billing-account-id}
   folderRef:
