--- a/templates/projects/kcc-namespace/kcc-namespace-viewer.yaml
+++ b/templates/projects/kcc-namespace/kcc-namespace-viewer.yaml
@@ -16,14 +16,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata: # kpt-merge: networking/cnrm-network-viewer-project-id
-  name: cnrm-network-viewer-project-id # kpt-set: cnrm-network-viewer-${project-id}
+  name: cnrm-network-viewer-project-id # kpt-set: cnrm-network-viewer-prod-${project-id}
   namespace: networking # kpt-set: ${networking-namespace}
 roleRef:
   name: cnrm-viewer
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
 subjects:
-  - name: cnrm-controller-manager-project-id # kpt-set: cnrm-controller-manager-${project-id}
+  - name: cnrm-controller-manager-project-id # kpt-set: cnrm-controller-manager-prod-${project-id}
     namespace: cnrm-system
     kind: ServiceAccount
 ---
@@ -32,13 +32,13 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata: # kpt-merge: projects/cnrm-project-viewer-project-id
-  name: cnrm-project-viewer-project-id # kpt-set: cnrm-project-viewer-${project-id}
+  name: cnrm-project-viewer-project-id # kpt-set: cnrm-project-viewer-prod-${project-id}
   namespace: projects # kpt-set: ${projects-namespace}
 roleRef:
   name: cnrm-viewer
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
 subjects:
-  - name: cnrm-controller-manager-project-id # kpt-set: cnrm-controller-manager-${project-id}
+  - name: cnrm-controller-manager-project-id # kpt-set: cnrm-controller-manager-prod-${project-id}
     namespace: cnrm-system
     kind: ServiceAccount
