--- a/templates/projects/kcc-namespace/namespace.yaml
+++ b/templates/projects/kcc-namespace/namespace.yaml
@@ -15,6 +15,6 @@
 apiVersion: v1
 kind: Namespace
 metadata: # kpt-merge: /project-id
-  name: project-id # kpt-set: ${project-id}
+  name: project-id # kpt-set: prod-${project-id}
   annotations:
-    cnrm.cloud.google.com/project-id: project-id # kpt-set: ${project-id}
+    cnrm.cloud.google.com/project-id: project-id # kpt-set: prod-${project-id}
