--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Get kpt package
+      - name: Get hyerarchy kpt package
         uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
         with:
           args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/hierarchy@main manifests/landing-zone/hierarchy/${{ inputs.departmentName }}
@@ -28,16 +28,27 @@ jobs:
 
       - name: Modify setters.yaml
         run: "sed -i -e 's/1234567890123/153064141304/' -e 's/department/${{ inputs.departmentName }}/' -e 's/service/${{ inputs.serviceName }}/' manifests/landing-zone/hierarchy/${{ inputs.departmentName }}/hierarchy.yaml"
-            
+
+      - name: Get project kpt package
+        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
+        with:
+          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/projects@main manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
+
+      - name: Change permission
+        run: sudo chown -R runner:docker manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
+      
+      - name: Modify setters.yaml
+        run: "sed -i -e 's/project-id: project-id/project-id: ${{ inputs.departmentName }}-${{ inputs.serviceName }}/' -e 's/name.of.folder/${{ inputs.departmentName }}.${{ inputs.serviceName }}/' manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}/setters.yaml" 
+
       - name: Git push
         run: |
           git config --global user.email "admin@example.com"
           git config --global user.name "Administrator"
           git add .
-          git commit -m "Create folder for ${{ inputs.departmentName }} dept. ${{ inputs.serviceName }} service"
+          git commit -m "Create folder and project for ${{ inputs.departmentName }} dept. ${{ inputs.serviceName }} service"
           git push origin dev
           
       - name: Create pull request
-        run: gh pr create -B "main" -t "Create ${{ inputs.departmentName }} dept ${{ inputs.serviceName }} service folder" -H dev -b "Review request for creating a new folder."
+        run: gh pr create -B "main" -t "Create ${{ inputs.departmentName }} dept ${{ inputs.serviceName }} service folder and project" -H dev -b "Review request for creating a new folder and project."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
