--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -29,16 +29,16 @@ jobs:
       - name: Modify setters.yaml
         run: "sed -i -e 's/1234567890123/153064141304/' -e 's/department/${{ inputs.departmentName }}/' -e 's/service/${{ inputs.serviceName }}/' manifests/landing-zone/hierarchy/${{ inputs.departmentName }}/hierarchy.yaml"
 
-      - name: Get project kpt package
-        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
-        with:
-          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/projects@main manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
-
-      - name: Change permission
-        run: sudo chown -R runner:docker manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
-      
-      - name: Modify setters.yaml
-        run: "sed -i -e 's/project-id: project-id/project-id: ${{ inputs.departmentName }}-${{ inputs.serviceName }}/' -e 's/name.of.folder/${{ inputs.departmentName }}.${{ inputs.serviceName }}/' manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}/setters.yaml" 
+#      - name: Get project kpt package
+#        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
+#        with:
+#          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/projects@main manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
+#
+#      - name: Change permission
+#        run: sudo chown -R runner:docker manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
+#      
+#      - name: Modify setters.yaml
+#        run: "sed -i -e 's/project-id: project-id/project-id: ${{ inputs.departmentName }}-${{ inputs.serviceName }}/' -e 's/name.of.folder/${{ inputs.departmentName }}.${{ inputs.serviceName }}/' manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}/setters.yaml" 
 
       - name: Git push
         run: |
