--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -3,7 +3,7 @@ name: Create the landing zone
 on:
   workflow_dispatch:
     inputs:
-      data:
+      hoge:
         type: string
         required: true
 
