--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -25,6 +25,17 @@ jobs:
       - name: echo inputs
         run: echo ${{ inputs.inputs }}
 
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+      
+      - name: Install dependencies
+        run: npm --prefix .github/scripts/ install .github/scripts/
+
+      - name: Create setters.yaml
+        run: node .github/scripts/index.js ${{ inputs.inputs }}
+
 #      - name: Get hyerarchy kpt package
 #        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
 #        with:
