--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -24,7 +24,7 @@ jobs:
         with:
           script: |
             const yaml = require('js-yaml')
-#            const json = JSON.parse(${{ inputs.inputs }})
+            const json = JSON.parse(${{ inputs.inputs }})
             console.log(${{ inputs.inputs }})
 
 #      - name: Install dependencies
