--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -24,8 +24,8 @@ jobs:
         with:
           script: |
             const yamllib = require('js-yaml')
-            const payload = '${{ inputs.inputs }}'
-            const json = JSON.parse(payload)
+            const payload = ${{ inputs.inputs }}
+            const json = JSON.parse(JSON.stringify(payload))
             const yaml = yamllib.dump(json)
             console.log(yaml)
 
