--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -3,7 +3,11 @@ name: Create the landing zone
 on:
   workflow_dispatch:
     inputs:
-      inputs:
+      departmentName:
+        type: string
+        required: true
+
+      setters:
         type: string
         required: true
         
@@ -13,6 +17,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Get hyerarchy kpt package
+        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
+        with:
+          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/hierarchy@main manifests/landing-zone/hierarchy/${{ inputs.departmentName }}
+
+      - name: Change permission
+        run: sudo chown -R runner:docker manifests/landing-zone/hierarchy/${{ inputs.departmentName }}
 
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -24,24 +36,29 @@ jobs:
         with:
           script: |
             const yamllib = require('js-yaml')
-            const payload = ${{ inputs.inputs }}
+            const payload = ${{ inputs.setters }}
             const json = JSON.parse(JSON.stringify(payload))
             const yaml = yamllib.dump(json)
             console.log(yaml)
+            fs.writeFile('manifests/landing-zone/hierarchy/${{ inputs.departmentName }}/setters.yaml', yaml, 'utf8', (err) => {
+              if (err) {
+                console.error(err.message)
+              }
+            })
+
+      - name: Git push
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git add .
+          git commit -m ":robot: Create folder at `date --iso-8601=seconds`"
+          git push origin dev
 
 #      - name: Install dependencies
 #        run: npm --prefix .github/scripts/ install .github/scripts/
 #
 #      - name: Create setters.yaml
 #        run: node .github/scripts/index.js "${{ inputs.inputs }}"
-#
-#      - name: Get hyerarchy kpt package
-#        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
-#        with:
-#          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/hierarchy@main manifests/landing-zone/hierarchy/${{ inputs.departmentName }}
-#
-#      - name: Change permission
-#        run: sudo chown -R runner:docker manifests/landing-zone/hierarchy/${{ inputs.departmentName }}
 #
 #      - name: Modify setters.yaml
 #        run: "sed -i -e 's/1234567890123/153064141304/' -e 's/department/${{ inputs.departmentName }}/' -e 's/service/${{ inputs.serviceName }}/' manifests/landing-zone/hierarchy/${{ inputs.departmentName }}/hierarchy.yaml"
@@ -57,13 +74,6 @@ jobs:
 #      - name: Modify setters.yaml
 #        run: "sed -i -e 's/project-id: project-id/project-id: ${{ inputs.departmentName }}-${{ inputs.serviceName }}/' -e 's/name.of.folder/${{ inputs.departmentName }}.${{ inputs.serviceName }}/' manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}/setters.yaml" 
 #
-#      - name: Git push
-#        run: |
-#          git config --global user.email "admin@example.com"
-#          git config --global user.name "Administrator"
-#          git add .
-#          git commit -m "Create folder and project for ${{ inputs.departmentName }} dept. ${{ inputs.serviceName }} service"
-#          git push origin dev
 #          
 #      - name: Create pull request
 #        run: gh pr create -B "main" -t "Create ${{ inputs.departmentName }} dept ${{ inputs.serviceName }} service folder and project" -H dev -b "Review request for creating a new folder and project."
