--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -35,6 +35,7 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
+            const fs = require('fs')
             const yamllib = require('js-yaml')
             const payload = ${{ inputs.setters }}
             const json = JSON.parse(JSON.stringify(payload))
