--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -55,6 +55,11 @@ jobs:
           git commit -m ":robot: Create folder at `date --iso-8601=seconds`"
           git push origin dev
 
+      - name: Create pull request
+        run: gh pr create -B "main" -t "Create ${{ inputs.departmentName }} folder" -H dev -b "Review request for creating a new folder."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 #      - name: Get project kpt package
 #        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
 #        with:
@@ -65,9 +70,4 @@ jobs:
 #      
 #      - name: Modify setters.yaml
 #        run: "sed -i -e 's/project-id: project-id/project-id: ${{ inputs.departmentName }}-${{ inputs.serviceName }}/' -e 's/name.of.folder/${{ inputs.departmentName }}.${{ inputs.serviceName }}/' manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}/setters.yaml" 
-#
-#          
-#      - name: Create pull request
-#        run: gh pr create -B "main" -t "Create ${{ inputs.departmentName }} dept ${{ inputs.serviceName }} service folder and project" -H dev -b "Review request for creating a new folder and project."
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
