--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -53,7 +53,7 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add .
           git commit -m ":robot: Create folder at `date --iso-8601=seconds`"
-          git push origin dev
+          git push origin main:dev
 
       - name: Create pull request
         run: gh pr create -B "main" -t "Create ${{ inputs.departmentName }} folder" -H dev -b "Review request for creating a new folder."
