--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -51,7 +51,7 @@ jobs:
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git add .
+          git add manifests/landing-zone/
           git commit -m ":robot: Create folder at `date --iso-8601=seconds`"
           git push origin main:dev
 
