--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -18,56 +18,55 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Get hyerarchy kpt package
-        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
-        with:
-          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/hierarchy@main manifests/landing-zone/hierarchy/${{ inputs.departmentName }}
+     - name: Get project kpt package
+       uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
+       with:
+         args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/projects@main manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
 
-      - name: Change permission
-        run: sudo chown -R runner:docker manifests/landing-zone/hierarchy/${{ inputs.departmentName }}
+     - name: Change permission
+       run: sudo chown -R runner:docker manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
+     
+     - name: Modify setters.yaml
+       run: "sed -i -e 's/project-id: project-id/project-id: ${{ inputs.departmentName }}-${{ inputs.serviceName }}/' -e 's/name.of.folder/${{ inputs.departmentName }}.${{ inputs.serviceName }}/' manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}/setters.yaml" 
 
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
+      # - name: Get hyerarchy kpt package
+      #   uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
+      #   with:
+      #     args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/hierarchy@main manifests/landing-zone/hierarchy/${{ inputs.departmentName }}
 
-      - run: npm install js-yaml
-      - uses: actions/github-script@v6
-        with:
-          script: |
-            const fs = require('fs')
-            const yamllib = require('js-yaml')
-            const payload = ${{ inputs.setters }}
-            const json = JSON.parse(JSON.stringify(payload))
-            const yaml = yamllib.dump(json)
-            console.log(yaml)
-            fs.writeFile('manifests/landing-zone/hierarchy/${{ inputs.departmentName }}/setters.yaml', yaml, 'utf8', (err) => {
-              if (err) {
-                console.error(err.message)
-              }
-            })
+      # - name: Change permission
+      #   run: sudo chown -R runner:docker manifests/landing-zone/hierarchy/${{ inputs.departmentName }}
 
-      - name: Git push
-        run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-          git add manifests/landing-zone/
-          git commit -m ":robot: Create folder at `date --iso-8601=seconds`"
-          git push origin main:dev
+      # - name: Use Node.js
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: '16.x'
 
-      - name: Create pull request
-        run: gh pr create -B "main" -t "Create ${{ inputs.departmentName }} folder" -H dev -b "Review request for creating a new folder."
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - run: npm install js-yaml
+      # - uses: actions/github-script@v6
+      #   with:
+      #     script: |
+      #       const fs = require('fs')
+      #       const yamllib = require('js-yaml')
+      #       const payload = ${{ inputs.setters }}
+      #       const json = JSON.parse(JSON.stringify(payload))
+      #       const yaml = yamllib.dump(json)
+      #       console.log(yaml)
+      #       fs.writeFile('manifests/landing-zone/hierarchy/${{ inputs.departmentName }}/setters.yaml', yaml, 'utf8', (err) => {
+      #         if (err) {
+      #           console.error(err.message)
+      #         }
+      #       })
 
-#      - name: Get project kpt package
-#        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
-#        with:
-#          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/projects@main manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
-#
-#      - name: Change permission
-#        run: sudo chown -R runner:docker manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}
-#      
-#      - name: Modify setters.yaml
-#        run: "sed -i -e 's/project-id: project-id/project-id: ${{ inputs.departmentName }}-${{ inputs.serviceName }}/' -e 's/name.of.folder/${{ inputs.departmentName }}.${{ inputs.serviceName }}/' manifests/landing-zone/projects/${{ inputs.departmentName }}-${{ inputs.serviceName }}/setters.yaml" 
+      # - name: Git push
+      #   run: |
+      #     git config user.name "${{ github.actor }}"
+      #     git config user.email "${{ github.actor }}@users.noreply.github.com"
+      #     git add manifests/landing-zone/
+      #     git commit -m ":robot: Create folder at `date --iso-8601=seconds`"
+      #     git push origin main:dev
 
+      # - name: Create pull request
+      #   run: gh pr create -B "main" -t "Create ${{ inputs.departmentName }} folder" -H dev -b "Review request for creating a new folder."
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
