--- a/templates/project/kcc-namespace/kcc.yaml
+++ b/templates/project/kcc-namespace/kcc.yaml
@@ -16,40 +16,40 @@ apiVersion: core.cnrm.cloud.google.com/v1beta1
 kind: ConfigConnectorContext
 metadata: # kpt-merge: project-id/configconnectorcontext.core.cnrm.cloud.google.com
   name: configconnectorcontext.core.cnrm.cloud.google.com
-  namespace: project-id # kpt-set: prod-${project-id}
+  namespace: project-id # kpt-set: ${project-id}
   annotations:
     cnrm.cloud.google.com/blueprint: cnrm/kcc-namespace/v0.4.3,kpt-pkg
 spec:
-  googleServiceAccount: kcc-project-id@management-project-id.iam.gserviceaccount.com # kpt-set: kcc-prod-${project-id}@${management-project-id}.iam.gserviceaccount.com
+  googleServiceAccount: kcc-project-id@management-project-id.iam.gserviceaccount.com # kpt-set: kcc-${project-id}@${management-project-id}.iam.gserviceaccount.com
 ---
 # Create GCP ServiceAccount for use by KCC to manage resources in this project
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMServiceAccount
 metadata: # kpt-merge: config-control/kcc-project-id
-  name: kcc-project-id # kpt-set: kcc-prod-${project-id}
+  name: kcc-project-id # kpt-set: kcc-${project-id}
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
     cnrm.cloud.google.com/blueprint: cnrm/kcc-namespace/v0.4.3,kpt-pkg
     cnrm.cloud.google.com/project-id: management-project-id # kpt-set: ${management-project-id}
     cnrm.cloud.google.com/ignore-clusterless: "true"
 spec:
-  displayName: kcc-project-id # kpt-set: kcc-prod-${project-id}
+  displayName: kcc-project-id # kpt-set: kcc-${project-id}
 ---
 # Allow KCC's Kubernetes Service Account to use the GCP ServiceAccount
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPartialPolicy
 metadata: # kpt-merge: config-control/project-id-sa-workload-identity-binding
-  name: project-id-sa-workload-identity-binding # kpt-set: prod-${project-id}-sa-workload-identity-binding
+  name: project-id-sa-workload-identity-binding # kpt-set: ${project-id}-sa-workload-identity-binding
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
     cnrm.cloud.google.com/blueprint: cnrm/kcc-namespace/v0.4.3,kpt-pkg
     cnrm.cloud.google.com/ignore-clusterless: "true"
 spec:
   resourceRef:
-    name: kcc-project-id # kpt-set: kcc-prod-${project-id}
+    name: kcc-project-id # kpt-set: kcc-${project-id}
     apiVersion: iam.cnrm.cloud.google.com/v1beta1
     kind: IAMServiceAccount
   bindings:
     - role: roles/iam.workloadIdentityUser
       members:
-        - member: serviceAccount:management-project-id.svc.id.goog[cnrm-system/cnrm-controller-manager-project-id] # kpt-set: serviceAccount:${management-project-id}.svc.id.goog[cnrm-system/cnrm-controller-manager-prod-${project-id}]
+        - member: serviceAccount:management-project-id.svc.id.goog[cnrm-system/cnrm-controller-manager-project-id] # kpt-set: serviceAccount:${management-project-id}.svc.id.goog[cnrm-system/cnrm-controller-manager-${project-id}]
