--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -22,7 +22,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - run: echo ${{ inputs.environment }}
+      - run: |
+          env=(${{ inputs.environment }}//,/)
+          echo env[0]
+          echo env[1]
+          echo env[2]
 
     #  - name: Get project kpt package
     #    uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
