--- a/templates/folders/folders.yaml
+++ b/templates/folders/folders.yaml
@@ -2,6 +2,7 @@ apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Folder
 metadata:
   name: department-folder # kpt-set: ${department}-folder
+  namespace: hierarchy  
 spec:
   displayName: folder-name # kpt-set: ${department}
   organizationRef:
@@ -11,6 +12,7 @@ apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Folder
 metadata:
   name: service-folder # kpt-set: ${department}-${service}-folder
+  namespace: hierarchy
 spec:
   displayName: folder-name # kpt-set: ${department}-${service}
   folderRef:
