--- a/.github/workflows/create-landingzone.yaml
+++ b/.github/workflows/create-landingzone.yaml
@@ -3,10 +3,6 @@ name: Create the landing zone
 on:
   workflow_dispatch:
     inputs:
-      setters:
-        type: string
-        required: true
-
       department:
         type: string
         required: true
@@ -14,7 +10,15 @@ on:
       service:
         type: string
         required: true
-        
+
+      hierarchy_setters:
+        type: string
+        required: true
+
+      project_setters:
+        type: string
+        required: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,21 +26,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Get folders kpt package
+      - name: Get hierarchy kpt package
         uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
         with:
-          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/folders@main manifests/landing-zone/folders/${{ inputs.department }}
+          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/hierarchy@main manifests/landing-zone/hierarchy/${{ inputs.department }}
+
+      - name: Get project kpt package
+        uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
+        with:
+          args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/projects@main manifests/landing-zone/projects/${{ inputs.department }}/${{ inputs.service }}
 
       - name: Change permission
-        run: sudo chown -R runner:docker manifests/landing-zone/folders/${{ inputs.department }}
-
-      # - name: Get hyerarchy kpt package
-      #   uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
-      #   with:
-      #     args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/hierarchy@main manifests/landing-zone/hierarchy/${{ inputs.department }}
-
-      # - name: Change permission
-      #   run: sudo chown -R runner:docker manifests/landing-zone/hierarchy/${{ inputs.department }}
+        run: |
+          sudo chown -R runner:docker manifests/landing-zone/hierarchy/${{ inputs.department }}
+          sudo chown -R runner:docker manifests/landing-zone/projects/${{ inputs.department }}
 
       - name: Use Node.js
         uses: actions/setup-node@v3
@@ -49,26 +52,28 @@ jobs:
           script: |
             const fs = require('fs')
             const yamllib = require('js-yaml')
-            const payload = ${{ inputs.setters }}
-            const json = JSON.parse(JSON.stringify(payload))
-            const yaml = yamllib.dump(json)
+
+            var payload = ${{ inputs.hierarchy_setters }}
+            var json = JSON.parse(JSON.stringify(payload))
+            var yaml = yamllib.dump(json)
             console.log(yaml)
-            fs.writeFile('manifests/landing-zone/folders/${{ inputs.department }}/setters.yaml', yaml, 'utf8', (err) => {
+
+            fs.writeFile('manifests/landing-zone/hierarchy/${{ inputs.department }}/setters.yaml', yaml, 'utf8', (err) => {
               if (err) {
                 console.error(err.message)
               }
             })
 
-      # - name: Get project kpt package
-      #   uses: docker://gcr.io/kpt-dev/kpt:v1.0.0-beta.9
-      #   with:
-      #     args: pkg get https://github.com/yoshimasak/configcontroller-demorepo.git/templates/projects@main manifests/landing-zone/projects/${{ inputs.department }}-${{ inputs.service }}
+            payload = ${{ inputs.project_setters }}
+            json = JSON.parse(JSON.stringify(payload))
+            yaml = yamllib.dump(json)
+            console.log(yaml)
 
-      # - name: Change permission
-      #   run: sudo chown -R runner:docker manifests/landing-zone/projects/${{ inputs.department }}-${{ inputs.service }}
-      
-      # - name: Modify setters.yaml
-      #   run: "sed -i -e 's/project-id: project-id/project-id: ${{ inputs.department }}-${{ inputs.service }}/' -e 's/name.of.folder/${{ inputs.department }}.${{ inputs.service }}/' manifests/landing-zone/projects/${{ inputs.department }}-${{ inputs.service }}/setters.yaml" 
+            fs.writeFile('manifests/landing-zone/pprojects/${{ inputs.department }}/${{ inputs.service }}/setters.yaml', yaml, 'utf8', (err) => {
+              if (err) {
+                console.error(err.message)
+              }
+            })
 
       - name: Git push
         run: |
