--- a/manifests/landing-zone/namespaces/logging.yaml
+++ b/manifests/landing-zone/namespaces/logging.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: v1
 kind: Namespace
-metadata: # kpt-merge: /logging
+metadata:
   name: logging
   annotations:
     cnrm.cloud.google.com/organization-id: "123456789012" # kpt-set: ${org-id}
@@ -21,7 +21,7 @@ metadata: # kpt-merge: /logging
 ---
 apiVersion: core.cnrm.cloud.google.com/v1beta1
 kind: ConfigConnectorContext
-metadata: # kpt-merge: logging/configconnectorcontext.core.cnrm.cloud.google.com
+metadata:
   name: configconnectorcontext.core.cnrm.cloud.google.com
   namespace: logging
   annotations:
@@ -32,7 +32,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMServiceAccount
-metadata: # kpt-merge: config-control/logging-sa
+metadata:
   name: logging-sa
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -44,7 +44,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/logging-sa-logadmin-permissions
+metadata:
   name: logging-sa-logadmin-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -61,7 +61,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/logging-sa-bigqueryadmin-permissions
+metadata:
   name: logging-sa-bigqueryadmin-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -78,7 +78,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPartialPolicy
-metadata: # kpt-merge: config-control/logging-sa-workload-identity-binding
+metadata:
   name: logging-sa-workload-identity-binding
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -97,7 +97,7 @@ spec:
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
-metadata: # kpt-merge: projects/allow-resource-reference-from-logging
+metadata:
   name: allow-resource-reference-from-logging
   namespace: projects
   annotations:
