--- a/manifests/landing-zone/namespaces/networking.yaml
+++ b/manifests/landing-zone/namespaces/networking.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMServiceAccount
-metadata: # kpt-merge: config-control/networking-sa
+metadata:
   name: networking-sa
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -25,7 +25,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/networking-sa-networkadmin-permissions
+metadata:
   name: networking-sa-networkadmin-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -42,7 +42,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/networking-sa-security-permissions
+metadata:
   name: networking-sa-security-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -59,7 +59,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/networking-sa-dns-permissions
+metadata:
   name: networking-sa-dns-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -76,7 +76,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/networking-sa-service-control-permissions
+metadata:
   name: networking-sa-service-control-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -93,7 +93,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/networking-sa-xpnadmin-permissions
+metadata:
   name: networking-sa-xpnadmin-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -110,7 +110,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPartialPolicy
-metadata: # kpt-merge: config-control/networking-sa-workload-identity-binding
+metadata:
   name: networking-sa-workload-identity-binding
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -129,7 +129,7 @@ spec:
 ---
 apiVersion: v1
 kind: Namespace
-metadata: # kpt-merge: /networking
+metadata:
   name: networking
   annotations:
     cnrm.cloud.google.com/organization-id: "123456789012" # kpt-set: ${org-id}
@@ -137,7 +137,7 @@ metadata: # kpt-merge: /networking
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
-metadata: # kpt-merge: projects/allow-resource-reference-from-networking
+metadata:
   name: allow-resource-reference-from-networking
   namespace: projects
   annotations:
@@ -153,7 +153,7 @@ subjects:
 ---
 apiVersion: core.cnrm.cloud.google.com/v1beta1
 kind: ConfigConnectorContext
-metadata: # kpt-merge: networking/configconnectorcontext.core.cnrm.cloud.google.com
+metadata:
   name: configconnectorcontext.core.cnrm.cloud.google.com
   namespace: networking
   annotations:
