--- a/manifests/landing-zone/namespaces/policies.yaml
+++ b/manifests/landing-zone/namespaces/policies.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMServiceAccount
-metadata: # kpt-merge: config-control/policies-sa
+metadata:
   name: policies-sa
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -25,7 +25,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/policies-sa-orgpolicyadmin-permissions
+metadata:
   name: policies-sa-orgpolicyadmin-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -42,7 +42,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPartialPolicy
-metadata: # kpt-merge: config-control/policies-sa-workload-identity-binding
+metadata:
   name: policies-sa-workload-identity-binding
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -61,7 +61,7 @@ spec:
 ---
 apiVersion: v1
 kind: Namespace
-metadata: # kpt-merge: /policies
+metadata:
   name: policies
   annotations:
     cnrm.cloud.google.com/organization-id: "123456789012" # kpt-set: ${org-id}
@@ -69,7 +69,7 @@ metadata: # kpt-merge: /policies
 ---
 apiVersion: core.cnrm.cloud.google.com/v1beta1
 kind: ConfigConnectorContext
-metadata: # kpt-merge: policies/configconnectorcontext.core.cnrm.cloud.google.com
+metadata:
   name: configconnectorcontext.core.cnrm.cloud.google.com
   namespace: policies
   annotations:
