--- a/manifests/landing-zone/namespaces/projects.yaml
+++ b/manifests/landing-zone/namespaces/projects.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMServiceAccount
-metadata: # kpt-merge: config-control/projects-sa
+metadata:
   name: projects-sa
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -25,7 +25,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/projects-sa-projectiamadmin-permissions
+metadata:
   name: projects-sa-projectiamadmin-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -42,7 +42,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/projects-sa-projectcreator-permissions
+metadata:
   name: projects-sa-projectcreator-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -59,7 +59,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/projects-sa-projectmover-permissions
+metadata:
   name: projects-sa-projectmover-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -76,7 +76,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/projects-sa-projectdeleter-permissions
+metadata:
   name: projects-sa-projectdeleter-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -93,7 +93,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/projects-sa-billinguser-permissions
+metadata:
   name: projects-sa-billinguser-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -110,7 +110,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicyMember
-metadata: # kpt-merge: config-control/projects-sa-serviceusageadmin-permissions
+metadata:
   name: projects-sa-serviceusageadmin-permissions
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -127,7 +127,7 @@ spec:
 ---
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPartialPolicy
-metadata: # kpt-merge: config-control/projects-sa-workload-identity-binding
+metadata:
   name: projects-sa-workload-identity-binding
   namespace: config-control # kpt-set: ${management-namespace}
   annotations:
@@ -146,7 +146,7 @@ spec:
 ---
 apiVersion: v1
 kind: Namespace
-metadata: # kpt-merge: /projects
+metadata:
   name: projects
   annotations:
     cnrm.cloud.google.com/organization-id: "123456789012" # kpt-set: ${org-id}
@@ -154,7 +154,7 @@ metadata: # kpt-merge: /projects
 ---
 apiVersion: core.cnrm.cloud.google.com/v1beta1
 kind: ConfigConnectorContext
-metadata: # kpt-merge: projects/configconnectorcontext.core.cnrm.cloud.google.com
+metadata:
   name: configconnectorcontext.core.cnrm.cloud.google.com
   namespace: projects
   annotations:
