--- a/manifests/landing-zone/policies/deletion-policy-required-template.yaml
+++ b/manifests/landing-zone/policies/deletion-policy-required-template.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: templates.gatekeeper.sh/v1beta1
 kind: ConstraintTemplate
-metadata: # kpt-merge: /gcprequiredeletionpolicy
+metadata:
   name: gcprequiredeletionpolicy
 spec:
   crd:
