--- a/manifests/landing-zone/policies/disable-iam-grants-default-sa.yaml
+++ b/manifests/landing-zone/policies/disable-iam-grants-default-sa.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: ResourceManagerPolicy
-metadata: # kpt-merge: policies/disable-iam-grants-default-sa
+metadata:
   name: disable-iam-grants-default-sa
   namespace: policies
   annotations:
