--- a/manifests/landing-zone/policies/disable-nested-virtualization.yaml
+++ b/manifests/landing-zone/policies/disable-nested-virtualization.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: ResourceManagerPolicy
-metadata: # kpt-merge: policies/disable-nested-virtualization
+metadata:
   name: disable-nested-virtualization
   namespace: policies
   annotations:
