--- a/manifests/landing-zone/policies/disable-vm-external-ip.yaml
+++ b/manifests/landing-zone/policies/disable-vm-external-ip.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: ResourceManagerPolicy
-metadata: # kpt-merge: policies/disable-vm-external-ip
+metadata:
   name: disable-vm-external-ip
   namespace: policies
   annotations:
