--- a/manifests/landing-zone/policies/enforce-uniform-bucket-lvl-access.yaml
+++ b/manifests/landing-zone/policies/enforce-uniform-bucket-lvl-access.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: ResourceManagerPolicy
-metadata: # kpt-merge: policies/enforce-uniform-bucket-lvl-access
+metadata:
   name: enforce-uniform-bucket-lvl-access
   namespace: policies
   annotations:
