--- a/manifests/landing-zone/policies/folder-naming-constraint-template.yaml
+++ b/manifests/landing-zone/policies/folder-naming-constraint-template.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: templates.gatekeeper.sh/v1beta1
 kind: ConstraintTemplate
-metadata: # kpt-merge: /gcpenforcenamingv2
+metadata:
   name: gcpenforcenamingv2
 spec:
   crd:
