--- a/manifests/landing-zone/policies/restrict-cloud-sql-public-ip.yaml
+++ b/manifests/landing-zone/policies/restrict-cloud-sql-public-ip.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: ResourceManagerPolicy
-metadata: # kpt-merge: policies/restrict-cloud-sql-public-ip
+metadata:
   name: restrict-cloud-sql-public-ip
   namespace: policies
   annotations:
