--- a/manifests/landing-zone/policies/restrict-lien-removal.yaml
+++ b/manifests/landing-zone/policies/restrict-lien-removal.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: ResourceManagerPolicy
-metadata: # kpt-merge: policies/restrict-lien-removal
+metadata:
   name: restrict-lien-removal
   namespace: policies
   annotations:
