--- a/manifests/landing-zone/policies/skip-default-network.yaml
+++ b/manifests/landing-zone/policies/skip-default-network.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: ResourceManagerPolicy
-metadata: # kpt-merge: policies/skip-default-network
+metadata:
   name: skip-default-network
   namespace: policies
   annotations:
