Add unique Id to project name

--- a/manifests/projects/project.yaml
+++ b/manifests/projects/project.yaml
@@ -1,10 +1,10 @@
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Project
 metadata:
-  name: prod-project-name # kpt-set: ${project-id}-prod-project
+  name: prod-project-name # kpt-set: ${project-id}-${unique-id}-prod-project
   namespace: projects
 spec:
-  name: prod-project-name # kpt-set: ${project-id}-prod
+  name: prod-project-name # kpt-set: ${project-id}-${unique-id}-prod
   billingAccountRef:
     external: "AAAAAA-BBBBBB-CCCCCC" # kpt-set: ${billing-account-id}
   folderRef:
